Changes to styling made to prevent scrolling when modal is active and shifting of body

--- a/app/assets/stylesheets/style_modal.scss
+++ b/app/assets/stylesheets/style_modal.scss
@@ -6,6 +6,10 @@
   z-index: 2 !important;
 }
 
+#close-button:hover {
+  cursor: pointer;
+}
+
 .overlay-base {
   z-index: 1 !important;
 }
@@ -17,7 +21,21 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(40, 40, 40, 0.7)
+  background-color: rgba(30, 30, 30, 0.85)
+}
+
+.ReactModal__Body--open {
+  position: static;
+  overflow-y: scroll;
+}
+
+.ReactModal__Html--open {
+  overflow-y: hidden;
+}
+
+.ReactModalPortal {
+  position: fixed;
+  z-index: 1 !important;
 }
 
 .baseClass {
@@ -25,8 +43,7 @@
   position: relative;
   max-width: 935px;
   width: auto;
-  height: auto;
-  max-height: 80%;
+  height: 600px;
   margin: auto;
   background: #fff;
   border-radius: 2px;
@@ -38,6 +55,7 @@
   position: relative;
   display: flex;
   width: 100%;
+  height: 100%;
 }
 
 #modal-photo-container {
@@ -58,8 +76,9 @@
   height: auto;
   min-width: 480px;
   max-width: 600px;
+  min-height: 600px;
   max-height: 750px;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 #modal-photo-information {
@@ -71,9 +90,10 @@
   .comments-container {
     border-bottom: 1px solid #efefef;
     overflow-y: auto;
+    height: 65%;
   }
   .photo-comments {
-    max-height: calc(100% - 193px);
+    max-height: 100%;
   }
   .like-count {
     padding-bottom: 6px;
